ForumPP: fix type error in feature-tour, align icon

--- a/stylesheets/forumpp.less
+++ b/stylesheets/forumpp.less
@@ -156,6 +156,7 @@
         height: 50px;
         white-space: nowrap;
         text-align: center;
+        vertical-align: middle;
     }
 
     .icon_thread {
